addhw: Make hostdev list a bit wider

--- a/ui/addhardware.ui
+++ b/ui/addhardware.ui
@@ -629,7 +629,6 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="n_rows">2</property>
-                            <property name="n_columns">2</property>
                             <property name="column_spacing">6</property>
                             <property name="row_spacing">6</property>
                             <child>
@@ -649,6 +648,7 @@
                             </child>
                             <child>
                               <object class="GtkScrolledWindow" id="scrolledwindow2">
+                                <property name="width_request">500</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="shadow_type">etched-in</property>
@@ -664,23 +664,8 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="right_attach">2</property>
                                 <property name="top_attach">1</property>
                                 <property name="bottom_attach">2</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkAlignment" id="alignment11">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <child>
-                                  <placeholder/>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="right_attach">2</property>
-                                <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
                           </object>
@@ -692,7 +677,7 @@
                           <object class="GtkLabel" id="label15">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label">phys</property>
+                            <property name="label">host</property>
                           </object>
                           <packing>
                             <property name="position">6</property>
