snapshots: Make sure 'current' icon is always visible (bz 1065074)

--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -324,6 +324,7 @@
               <object class="GtkScrolledWindow" id="scrolledwindow7">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">never</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTreeView" id="snapshot-list">
@@ -341,7 +342,7 @@
               </object>
               <packing>
                 <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
