ui: Add margins to 'description' text fields

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -819,6 +819,8 @@
                                                 <property name="can_focus">True</property>
                                                 <property name="hexpand">True</property>
                                                 <property name="wrap_mode">word</property>
+                                                <property name="left_margin">2</property>
+                                                <property name="right_margin">2</property>
                                               </object>
                                             </child>
                                           </object>
