--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -393,6 +393,8 @@
                                   <object class="GtkTextView" id="snapshot-description">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="left_margin">2</property>
+                                    <property name="right_margin">2</property>
                                   </object>
                                 </child>
                               </object>
