details: Don't stretch machine dropdown

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -932,7 +932,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
-                                            <property name="label">foo</property>
+                                            <property name="label">foooooooooooooo</property>
                                             <property name="selectable">True</property>
                                           </object>
                                           <packing>
@@ -975,6 +975,7 @@
                                           <object class="GtkComboBox" id="machine-type">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
+                                            <property name="halign">start</property>
                                             <signal name="changed" handler="on_machine_type_changed" swapped="no"/>
                                           </object>
                                           <packing>
