addhw: Desensitive the 'create storage' UI for cdrom/floppy
Since we already fail in that case anyways, it makes things a bit clearer.

--- a/ui/addhardware.ui
+++ b/ui/addhardware.ui
@@ -169,6 +169,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="halign">start</property>
+                                    <signal name="changed" handler="on_config_storage_devtype_changed" swapped="no"/>
                                     <child internal-child="accessible">
                                       <object class="AtkObject" id="config-storage-devtype-atkobject">
                                         <property name="AtkObject::accessible-name" translatable="yes">Device Type Field</property>
