--- a/ui/gfxdetails.ui
+++ b/ui/gfxdetails.ui
@@ -93,7 +93,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">1</property>
-        <property name="label" translatable="yes">_Address:</property>
+        <property name="label" translatable="yes">Addr_ess:</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">graphics-address</property>
       </object>
@@ -213,7 +213,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">1</property>
-        <property name="label" translatable="yes">_Keymap:</property>
+        <property name="label" translatable="yes">Ke_ymap:</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">graphics-keymap</property>
       </object>
