createpool: Clarify iscsi IQN fields (bz 1084011)

--- a/ui/createpool.ui
+++ b/ui/createpool.ui
@@ -315,7 +315,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">1</property>
-                            <property name="label" translatable="yes">_Source Path:</property>
+                            <property name="label" translatable="yes">sourcep:</property>
                             <property name="use_underline">True</property>
                           </object>
                           <packing>
@@ -330,7 +330,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">1</property>
-                            <property name="label" translatable="yes">_IQN:</property>
+                            <property name="label" translatable="yes">Initiator _IQN:</property>
                             <property name="use_underline">True</property>
                             <property name="mnemonic_widget">pool-iqn-chk</property>
                           </object>
